# Emoji-Bench

./: .env.example  .gitignore  README.md  TODO.md  index.html  index2.html  index_og.html  plan.md  pyproject.toml  report.md  todo.md
artifacts/emoji-bench-e-reconv-1000/: README.md  manifest.json
artifacts/emoji-bench-mixed-2000-numbers/: README.md  manifest.json
artifacts/eval-report-e-reconv-1000/: by_model.csv  by_model_difficulty.csv  (+5 more)
emoji_bench/: benchmark.py  benchmark_types.py  dataset.py  error_injector.py  eval_cli.py  evaluation.py  formatter.py  metric_extract.py  model_registry.py  numeric_labels.py  prompt_formatter.py  provider_eval.py  reconvergent_dataset.py  reconvergent_error_injector.py  reporting.py
scripts/: analyze_evals.py  evaluate_anthropic.py  evaluate_gemini.py  evaluate_model.py  evaluate_openai.py  extract_key_metrics.py  generate_dataset.py  generate_reconvergent_dataset.py  preview_dataset.py  relabel_dataset_numeric.py  run.sh  run_all_models_smoke.sh  run_numbers.sh  run_reconv.sh
tests/: test_benchmark.py  test_chain_generator.py  test_dataset.py  test_error_injector.py  test_eval_cli.py  test_evaluation.py  test_expressions.py  test_formatter.py  test_generator.py  test_integration.py  test_interpreter.py  test_metric_extract.py  test_model_registry.py  test_numeric_labels.py  test_operations.py  test_preview_dataset.py  test_prompt_formatter.py  test_provider_eval.py  test_reconvergent_dataset.py  test_reconvergent_error_injector.py  test_relabel_dataset_numeric.py  test_reporting.py  test_symbols.py  test_transforms.py
(+230 files in other folders)
