[project]
name = "emoji-bench"
version = "0.1.0"
description = "Benchmark for testing LLM error detection using novel formal systems"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
